--- a/.github/workflows/release-solution-to-prod.yml
+++ b/.github/workflows/release-solution-to-prod.yml
@@ -8,7 +8,7 @@ on:
     inputs:
       # Change this value
       solution_name:
-        description: 'ALMLab'
+        description: ALMLab
         required: true
         default: ALMLab
        #Do Not change these values
