--- a/.github/workflows/release-solution-to-prod.yml
+++ b/.github/workflows/release-solution-to-prod.yml
@@ -23,7 +23,7 @@ on:
       solution_source_folder:
        description: 'folder name to be created and checked in *do not change*'
        required: true
-       default: solutions/ALMLab
+       default: solutions/
       solution_release_folder:
        description: 'folder where the released binaries are going to be hosted *do not change*'
        required: true
